[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "advanced_data_annalytics_on_remote_server"
version = "0.0.1"
description = "This is a lecture in the data analytics on remote serv"
authors = [
  { name = "Akanit K." },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.0"


[tool.ruff]
line-length = 99
src = ["advanced_data_annalytics_on_remote_server"]
include = ["pyproject.toml", "advanced_data_annalytics_on_remote_server/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["advanced_data_annalytics_on_remote_server"]
force-sort-within-sections = true

